[package]
name = "transpors"
version = "0.1.0"
authors = ["n1 <hrdina.pavel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
reqwest = "0.10"
gtfs-structures = "0.22"
rayon = "1.5"
chrono = {version = "0.4", features = ["serde"] }
itertools = "0.8"
